build: correct build of tests projects

--- a/tests/CityNexus.People.Domain.UnitTests/CityNexus.People.Domain.UnitTests.csproj
+++ b/tests/CityNexus.People.Domain.UnitTests/CityNexus.People.Domain.UnitTests.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\CityNexus.People.Domain\CityNexus.People.Domain.csproj" />
+      <ProjectReference Include="..\..\src\CityNexus.People.Domain\CityNexus.People.Domain.csproj" />
     </ItemGroup>
 
 </Project>
