--- a/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
+++ b/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
@@ -6,4 +6,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CityNexus.People.Application\CityNexus.People.Application.csproj" />
+      <ProjectReference Include="..\CityNexus.People.Domain\CityNexus.People.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="EntityFrameworkCore.NamingConventions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    </ItemGroup>
+
 </Project>
