--- a/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
+++ b/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="EntityFrameworkCore.NamingConventions" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
     </ItemGroup>
 
