feat: add Query Handler and Dapper to the application

--- a/src/CityNexus.People.Application/CityNexus.People.Application.csproj
+++ b/src/CityNexus.People.Application/CityNexus.People.Application.csproj
@@ -10,4 +10,7 @@
       <ProjectReference Include="..\CityNexus.People.Domain\CityNexus.People.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
+    </ItemGroup>
 </Project>
