--- a/src/CityNexus.People.Application/CityNexus.People.Application.csproj
+++ b/src/CityNexus.People.Application/CityNexus.People.Application.csproj
@@ -12,5 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-rc.2.24473.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-rc.2.24473.5" />
     </ItemGroup>
 </Project>
