feat: initial version of telemtry

--- a/src/CityNexus.People.Api/appsettings.Development.json
+++ b/src/CityNexus.People.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
+  },
+  "Telemetry": {
+    "ServiceName": "CityNexus.People.Api",
+    "ServiceVersion": "0.0.1",
+    "ExporterUrl": "http://localhost:5341/ingest/otlp/v1/logs"
   }
 }
