--- a/src/CityNexus.People.Api/appsettings.json
+++ b/src/CityNexus.People.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
+  },
+  "Telemetry": {
+    "ServiceName": "CityNexus.People.Api",
+    "ServiceVersion": "0.0.2",
+    "ExporterUrl": "http://localhost:5341/ingest/otlp/v1/logs"
   }
 }
