--- a/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
+++ b/src/CityNexus.People.Infra/CityNexus.People.Infra.csproj
@@ -16,6 +16,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.10.0-rc.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.10.0-rc.1" />
+      <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.10.0-rc.1" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
     </ItemGroup>
 
 </Project>
