feat: clean configuration

--- a/src/CityNexus.People.Api/appsettings.Development.json
+++ b/src/CityNexus.People.Api/appsettings.Development.json
@@ -8,9 +8,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
   },
-  "Telemetry": {
-    "ServiceName": "CityNexus.People.Api",
-    "ServiceVersion": "0.0.1",
-    "ExporterUrl": "http://localhost:5341/ingest/otlp/v1/logs"
+  "OTEL": {
+    "SERVICE": {
+      "Name": "CityNexus.People.Api",
+      "Version": "0.0.1"
+    },
+    "EXPORTER": {
+      "OTLP": {
+        "ENDPOINT": "http://localhost:5341/ingest/otlp/v1/logs"
+      }
+    }
   }
 }
