--- a/src/CityNexus.People.Api/Properties/launchSettings.json
+++ b/src/CityNexus.People.Api/Properties/launchSettings.json
@@ -16,7 +16,13 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5128",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:5341/ingest/otlp/v1/logs",
+        "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+        "OTEL_EXPORTER_OTLP_HEADERS": "",
+        "OTEL_EXPORTER_OTLP_COMPRESSION": "gzip",
+        "OTEL_SERVICE_NAME": "CityNexus.People.Api",
+        "OTEL_SERVICE_VERSION": "0.0.3"
       }
     },
     "https": {
