feat: added dead letter configuration and update event payload

--- a/src/CityNexus.People.Api/appsettings.Development.json
+++ b/src/CityNexus.People.Api/appsettings.Development.json
@@ -6,14 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;",
+    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
   },
   "RabbitMq": {
-      "Host": "localhost",
-      "Username": "root",
-      "Password": "root",
-      "VHost": "/",
-      "Port": 5672
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest",
+    "VHost": "/",
+    "Port": 5672
   },
   "OTEL": {
     "SERVICE": {
