ci: build and push docker image

--- a/src/CityNexus.People.Api/appsettings.Development.json
+++ b/src/CityNexus.People.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
+    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus_people;"
   },
   "RabbitMq": {
     "Host": "localhost",
