--- a/src/CityNexus.People.Api/appsettings.json
+++ b/src/CityNexus.People.Api/appsettings.json
@@ -5,13 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus;"
+    "DefaultConnection": "User ID=root;Password=root;Host=localhost;Port=5432;Database=citynexus_people;"
   },
-  "Telemetry": {
-    "ServiceName": "CityNexus.People.Api",
-    "ServiceVersion": "0.0.2",
-    "ExporterUrl": "http://localhost:5341/ingest/otlp/v1/logs"
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest",
+    "VHost": "/",
+    "Port": 5672
+  },
+  "OTEL": {
+    "SERVICE": {
+      "Name": "CityNexus.People.Api",
+      "Version": "0.0.1"
+    },
+    "EXPORTER": {
+      "OTLP": {
+        "ENDPOINT": "http://localhost:5341/ingest/otlp/v1/logs"
+      }
+    }
   }
 }
